--- a/yamdb.yaml
+++ b/yamdb.yaml
@@ -18,9 +18,8 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8 pytest
         pip install -r requirements.txt
-
     - name: Lint with flake8
-      run: flake8 .
+      run: flake8 --exclude=./tests --ignore=E402,W504 --max-line-length=120
 
     - name: Test with pytest
       run: pytest tests.py
@@ -30,13 +29,13 @@ jobs:
     runs-on: ubuntu-latest
     needs: tests
     steps:
-        - name: Check out the repo
-        uses: actions/checkout@v2
+    - name: Check out the repo
+      uses: actions/checkout@v2
 
-        - name: Push to Docker Hub
-        uses: docker/build-push-action@v1
-        with:
+    - name: Push to Docker Hub
+      uses: docker/build-push-action@v1
+      with:
             username: ${{ secrets.DOCKER_USERNAME }}
             password: ${{ secrets.DOCKER_PASSWORD }}
-            repository: svetlana/yamdb
+            repository: svetlana1905/yamdb_final
             tag_with_ref: true  
