--- a/yamdb.yaml
+++ b/yamdb.yaml
@@ -22,7 +22,7 @@ jobs:
       run: flake8 --exclude=./tests --ignore=E402,W504 --max-line-length=120
 
     - name: Test with pytest
-      run: pytest tests.py
+      run: pytest
 
   push_to_docker_hub:
     name: Push Docker image to Docker Hub
