--- a/yamdb.yaml
+++ b/yamdb.yaml
@@ -19,7 +19,7 @@ jobs:
         pip install flake8 pytest
         pip install -r requirements.txt
     - name: Lint with flake8
-      run: flake8 --exclude=./tests --ignore=E402,W504 --max-line-length=120
+      run: flake8 .
 
     - name: Test with pytest
       run: pytest
